添加实例模块

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="app_bg_color">#f5f5eb</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
-      <color name="transprant">#00000000</color>
+    <color name="transprant">#00000000</color>
       
       <color name="actionbar_devider_color">#ff212324</color>
     <color name="actionbar_selector_color">#4d000000</color>
@@ -13,8 +13,10 @@
     <color name="hint_text_color">#ff999999</color>
     
     
-      <color name="listview_line_color">#e0e0e0</color>
+    <color name="listview_line_color">#e0e0e0</color>
     <color name="listview_line_bold_color">#bebebe</color>
     <color name="btn_blue_color_press">#8fdfcc</color>
     <color name="btn_blue_color_normal">#44caaa</color>
+
+    <color name="cardview_initial_background">#71C3DE</color>
 </resources>
