--- a/app/src/main/res/layout/app_ui.xml
+++ b/app/src/main/res/layout/app_ui.xml
@@ -6,6 +6,7 @@
     <ListView android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         ></ListView>
 
 </LinearLayout>
