--- a/app/src/main/res/layout/message_ui.xml
+++ b/app/src/main/res/layout/message_ui.xml
@@ -8,6 +8,7 @@
     <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="我是"/>
+        android:text="我是"
+        android:id="@+id/message"/>
 
 </LinearLayout>
